# gtestcoverage

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CPack.cmake  Jenkinsfile  README.md  gtestcoverage-buildsettings.cmake.in  iwyu.imp  sonar-project.properties  sonar-project.properties.in
cmake/: CheckAndAddFlag.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindGTest.cmake  Findclang-tidy.cmake  Findgtestcoverage.cmake  Findtinyxml.cmake  coveragesetup.cmake  coveragetype.cmake  printproperties.cmake  rpath.cmake
json/: CMakeLists.txt  filesystemserializers.h  json.hpp  stdserializers.h
src/: BaseInputCLIAction.cpp  BaseInputCLIAction.h  BaseInputOutputCLIAction.cpp  BaseInputOutputCLIAction.h  Block.h  BlockInfo.cpp  BlockInfo.h  CLI.cpp  CLI.h  CLIAction.cpp  CLIAction.h  CLIException.cpp  CLIException.h  CLangCoverageException.cpp  CLangCoverageException.h  CMakeLists.txt  ClangCoverageData.cpp  ClangCoverageData.h  ClangCoverageDriver.cpp  ClangCoverageDriver.h  ClangCoverageFile.cpp  ClangCoverageFile.h  ClangCoverageFunction.cpp  ClangCoverageFunction.h  ClangCoverageFwd.h  CoberturaCLIAction.cpp  CoberturaCLIAction.h  CoverageData.cpp  CoverageData.h  CoverageDriver.cpp  CoverageDriver.h  FileInfo.cpp  FileInfo.h  FunctionInfo.cpp  FunctionInfo.h  GCCCoverageDriver.cpp  GCCCoverageDriver.h  GTestCoverageCovers.h  GTestCoverageListener.cpp  GTestCoverageListener.h  (+21 more)
test/: .gitignore  CMakeLists.txt  ClangParserTest.cpp  FakeCoverageDumper.cpp  LineInfoTest.cpp  clang1.json  clang2.json  clang3.json  main.cpp  test1.1.gcov  test1.2.gcov  test2.1.gcov  test2.2.gcov  test2.3.gcov
testproject/: CMakeLists.txt  atestfile.cpp  atestfile.h  auntestedfile.cpp  unittest.cpp
testproject/cmake/: .gitignore
